--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,8 @@ gradle/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/
+
 *.iws
 *.iml
 *.ipr
