--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ dependencies {
 
     // playground
     implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'com.zaxxer:HikariCP:5.0.1'
+    // Hibernate
+    implementation 'org.hibernate:hibernate-core:5.6.4.Final'
 }
 
 test {
