--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,16 @@ version: '3.8'
 
 services:
   cabin-server:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
     environment:
       - JAVA_OPTS=-Xmx512m
     command: ["java", "-jar", "CabinJ-1.0-SNAPSHOT.jar"]
+    volumes:
+      - gradle-cache:/root/.gradle
+
+volumes:
+  gradle-cache:
