--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ publishing {
     repositories {
         maven {
             name = "cabinJ"
-            url = uri("https://maven.pkg.github.com/sangqle/CabinJv")
+            url = uri("https://maven.pkg.github.com/sangqle/cabinjv")
             credentials {
                 username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                 password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
