--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -37,7 +37,7 @@ jobs:
       # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
       # the publishing section of your build.gradle
       - name: Publish to GitHub Packages
-        run: ./gradlew publish --stacktrace
+        run: ./gradlew publish --info
         env:
           USERNAME: ${{ secrets.GPR_USER }}
           TOKEN: ${{ secrets.GPR_TOKEN }}
