--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'ch.qos.logback:logback-classic:1.4.5'
     implementation 'org.slf4j:slf4j-api:2.0.9'
+
+    // Tests dependencies
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 }
 
 test {
