--- a/build.gradle
+++ b/build.gradle
@@ -40,18 +40,20 @@ java {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'ch.qos.logback:logback-classic:1.4.5'
     implementation 'org.slf4j:slf4j-api:2.0.9'
 
-    // Tests dependencies
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
-
     // http
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.4'
     implementation 'org.apache.httpcomponents.core5:httpcore5:5.3.4'
+
+    // Tests dependencies
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testImplementation 'org.assertj:assertj-core:3.27.3'
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.mockito:mockito-core:5.4.0'
+    testImplementation("org.mockito:mockito-junit-jupiter:5.14.2")
 }
 
 test {
