--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -12,13 +12,13 @@ jobs:
       id-token: write     # required for OIDC, optional otherwise
     steps:
       # 1) Check out the code
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       # 2) Set up Node.js for Docusaurus
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'      # Docusaurus needs ≥14
+          node-version: '20'      # Updated to more recent Node version
 
       # 3) Install & build inside docs/
       - name: Install dependencies
@@ -30,14 +30,14 @@ jobs:
 
       # 4) Enable Pages
       - name: Configure GitHub Pages
-        uses: actions/configure-pages@v3     # beta Pages setup :contentReference[oaicite:3]{index=3}
+        uses: actions/configure-pages@v4
 
-      # 5) Upload the static build (not using deprecated artifact actions)
+      # 5) Upload the static build (using latest version)
       - name: Upload site for deployment
-        uses: actions/upload-pages-artifact@v1  # packages docs/build :contentReference[oaicite:4]{index=4}
+        uses: actions/upload-pages-artifact@v3
         with:
           path: docs/build
 
       # 6) Deploy to Pages
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
