docs: add config github_page

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   deploy-docs:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     permissions:
       pages: write        # allow publishing to Pages
       id-token: write     # required for OIDC, optional otherwise
@@ -40,4 +43,5 @@ jobs:
 
       # 6) Deploy to Pages
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
