--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,14 +2,14 @@ name: Build and Test
 
 on:
   push:
-    branches: [ master, main, develop ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -31,22 +31,28 @@ jobs:
       - name: Run tests
         run: gradle test
 
-      - name: Generate test report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
         with:
-          name: Gradle Tests
-          path: build/test-results/test/*.xml
-          reporter: java-junit
+          files: |
+            build/test-results/test/*.xml
+
+      - name: Upload test reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-reports
+          path: |
+            build/reports/tests/
+            build/test-results/
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: build-artifacts
-          path: |
-            build/libs/
-            build/reports/
+          path: build/libs/
 
       - name: Publish to GitHub Packages
         if: github.ref == 'refs/heads/main'
