--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,15 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+    }
+    afterSuite { desc, result ->
+        if (!desc.parent) {
+            println "\nTest results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
+        }
+    }
 }
 
 task copyDependencies(type: Copy) {
