server: prevent the event loop still running when the server is stop

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build with Gradle
         run: gradle build
 
-      - name: Run tests
+      - name: Run TESTs
         run: gradle test
 
       - name: Upload test reports
